# tmp

./: .gitignore  README.md
app/: Cargo.toml  Dioxus.toml
app/src/: main.rs
docs/: learning.md  readme.md
ft_putchr/: Cargo.toml  ft_putchr.rs  run.sh  tmp  watch.sh
ft_putchr/src/: ft_putchr.rs  ft_putchrs.rs  lib.rs  main.rs
lib/tcpstuff/: Cargo.toml
mkown/: README.md
mkown/store/: note.md
my_project/: .gitignore  Cargo.toml
my_project/lib/add/: Cargo.toml
my_project/lib/sub/: Cargo.toml
my_project/lib/sub/src/: lib.rs
my_project/src/: main.rs
my_project/src/lib/add/: Cargo.toml
play/: .gitignore  Cargo.toml  log4rs.yaml  readme.md  run.sh
play/lib/tracer/: Cargo.toml
play/lib/tracer/src/: lib.rs  lib.rs.bak
play/src/: main.rs
rststuff/: Cargo.toml
rststuff/lib/basic_echo_server/: Cargo.toml
rststuff/lib/basic_echo_server/src/: lib.rs
rststuff/lib/stat_macro/src/: main.rs
rststuff/lib/stat_macro/tests/: intergration_test.rs
rststuff/scripts/: cmds.sh  run.sh
rststuff/src/: main.rs
solver/: Cargo.toml
solver/src/: main.rs  server_cert.pem  server_key.pem
statmacro/: Cargo.toml
statmacro/lib/stat_macro/: Cargo.toml
statmacro/lib/stat_macro/src/: lib.rs
statmacro/scripts/: run.sh
statmacro/src/: main.rs
statmacro/tests/: intergration_test.rs
stats_macro/: Cargo.toml
stats_macro/lib/stats_mac/: Cargo.toml
stats_macro/lib/stats_mac/src/: lib.rs
stats_macro/src/: main.rs
sto/: Cargo.toml
sto/docs/: note.md
sto/lib/: basic.rs  mod.rs  sum.rs
sto/src/: main.rs
sto/tests/: test_basic.rs  test_srv.rs  test_sum.rs
sync_macro/: Cargo.toml
sync_macro/lib/synco/: .gitignore  Cargo.toml
sync_macro/lib/synco/src/: lib.rs
sync_macro/src/: main.rs
tib/: .gitignore  Cargo.toml  run.sh  watch.sh
tib/src/: ft_putchr.rs  main.rs
