[package]
name = "play"
version = "0.1.0"
edition = "2021"

[lib]
name = "play"                  # Optional, specify if you want to have a library as well
path = "lib/tracer/src/lib.rs" # Specify if you have a library codebase
proc-macro = true

[dependencies]
tracer = { path = "lib/tracer" }
base64 = "0.22.1"
crossbeam-channel = "0.5.13"
rayon = "1.10.0"
uuid = { version = "1.11.0", features = ["v4"] }
log = "0.4.22"
env_logger = "0.11.5"
thiserror = "1.0.64"
config = "0.14.0"
chrono = "0.4.38"
backtrace = "0.3.74"
syn = { version = "2.0.79", features = ["full"] }
quote = "1.0.37"
log4rs = "1.3.0"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
