[package]
name = "solver"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
inflector = "0.11.4"
quote = "1.0.37"                                       # For programmatic code generation
syn = { version = "2.0.79", features = ["full"] }      # For parsing Rust tokens
