[package]
name = "solver"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
async-graphql = "7.0.11"
async-graphql-warp = "7.0.11"
warp = "0.3.7"
quinn = "0.11.5"
rmp-serde = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
futures = "0.3.31"
rand = "0.8.5"
rayon = "1.10.0"
