[package]
name = "sto"
edition = "2021"

[lib]
name = "lib"
path = "lib/mod.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.11"
ctrlc = "3.4"
log = "0.4.25"
env_logger = "0.11.6"
rand = "0.8.5"

[dev-dependencies]
tokio-test = "0.4"
