[package]
name = "basic_echo_server"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"
#proc-macro = true

#[[bin]]
#name = "echo_server"
#path = "src/main.rs"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde = "1.0.210"
serde_json = "1.0.128"
log = "0.4.22"
env_logger = "0.11.5"